welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:16: error: illegal character '\u202f'
 for(nbpas<8){
^Runner:2: error: '<-' expected but ')' found.
for(nbpas<8){
           ^Runner:30: error: illegal start of simple expression
	}
        ^