welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbpas =0;
for(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche(); nbpas = 0;
for(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche();nbpas = 0;
 for(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche(); nbpas=0;
for(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}